--- a/src/components/eligibility-form/EligibilityForm.scss
+++ b/src/components/eligibility-form/EligibilityForm.scss
@@ -1,7 +1,7 @@
-.eligibility-title {
-    margin-bottom: 32px;
+// .eligibility-title {
+//     margin-bottom: 32px;
 
-    h2 {
-        font-weight: 400;
-    }
-}
+//     h2 {
+//         font-weight: 400;
+//     }
+// }
