--- a/src/components/uploadDocuments/uploadDocuments.scss
+++ b/src/components/uploadDocuments/uploadDocuments.scss
@@ -1,8 +1,9 @@
 .documentWrapper {
-    border: 1px solid gray;
+    border: 1px solid #D0D0D0;
     width: 50%;
     border-radius: 5px;
     float: left;
+    padding: 10px;
 }
 
 .unorderedList {
