--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ $font-color: #4a4a4a;
   width: 100%;
   margin: 0 auto;
   padding: 10rem;
-  text-align: center;
+  // text-align: center;
   padding-top: 0px;
 }
 
@@ -546,17 +546,17 @@ a:hover {
   filter: alpha(opacity=1);
 }
 
-.rs-steps-item-content:before {
-  content: '';
-  top: 15px;
-  left: 0%;
-  width: 28%;
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-color: var(--rs-steps-border);
-  position: absolute;
-}
+// .rs-steps-item-content:before {
+//   content: '';
+//   top: 15px;
+//   left: 0%;
+//   width: 28%;
+//   border-top-width: 1px;
+//   border-top-style: solid;
+//   border-color: var(--rs-steps-border);
+//   position: absolute;
+// }
 
-.rs-steps-item-title {
-  margin-left: 10%;
-}
+// .rs-steps-item-title {
+//   margin-left: 10%;
+// }
