--- a/src/components/application-history/LoanApplicationHistory.scss
+++ b/src/components/application-history/LoanApplicationHistory.scss
@@ -1,29 +1,4 @@
-.app-card-container {
-    border-top: 10px solid green;
-}
-
-.app-card-title {
-    font-size: 1.8rem;
-}
-
-.status-indicator {
-    width: 120px;
-    height: 24px;
-    border-radius: 15px;
+.application-history-cards {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: 400;
-    background: green;
-    color: #fff;
-
-    span {
-        margin-top: 3px;
-    }
-}
-
-.app-card-body {
-    margin-top: 15px;
-    font-size: 1.4rem;
+    gap: 30px;
 }
