--- a/src/components/application-history-card/ApplicationHistoryCard.scss
+++ b/src/components/application-history-card/ApplicationHistoryCard.scss
@@ -1,7 +1,8 @@
 .app-card-container {
     box-shadow: 2px 2px 6px #afafaf;
     background: #e1ffed;
-
+    transition: all 0.1s ease-in;
+    
     .app-card-title {
         font-size: 1.8rem;
     }
@@ -37,7 +38,14 @@
         }
     }
 
-    :hover {
-        cursor: pointer;
+    &:hover {
+        cursor: pointer;   
+        box-shadow: 4px 4px 6px #afafaf;;    
+        scale: 1.01; 
+    }
+
+    &:active {
+        scale: 1;
+        box-shadow: 2px 2px 6px #afafaf;
     }
 }
