--- a/src/components/application-history-card/ApplicationHistoryCard.scss
+++ b/src/components/application-history-card/ApplicationHistoryCard.scss
@@ -1,7 +1,14 @@
+$view-btn-color: #198754;
+
 .app-card-container {
     box-shadow: 2px 2px 6px #afafaf;
     background: #e1ffed;
     transition: all 0.1s ease-in;
+
+    .app-card-title-container {
+        padding-bottom: 6px;
+        border-bottom: 1px solid #bce2cb;
+    }
     
     .app-card-title {
         font-size: 1.8rem;
@@ -26,7 +33,7 @@
     }
 
     .app-card-body {
-        margin-top: 15px;
+        margin-top: 10px;
         font-size: 1.4rem;
         max-height: 100px;
 
@@ -39,13 +46,29 @@
     }
 
     &:hover {
-        cursor: pointer;   
         box-shadow: 4px 4px 6px #afafaf;;    
         scale: 1.01; 
     }
 
-    &:active {
-        scale: 1;
-        box-shadow: 2px 2px 6px #afafaf;
+    .app-card-footer {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+
+        .btn-view-details {
+            width: 72px;
+            border: 1px solid $view-btn-color;
+            color: $view-btn-color;
+            transition: all 0.2s;
+
+            &:hover {
+                background-color: #125e3a;
+                color: #fff;
+            }
+
+            &:active {
+                scale: 0.95;
+            }
+        }
     }
 }
