--- a/src/components/application-history-card/ApplicationHistoryCard.scss
+++ b/src/components/application-history-card/ApplicationHistoryCard.scss
@@ -2,7 +2,7 @@ $view-btn-color: #198754;
 
 .app-card-container {
     box-shadow: 2px 2px 6px #afafaf;
-    background: #e1ffed;
+    background: #fbfffd;
     transition: all 0.1s ease-in;
 
     .app-card-title-container {
@@ -29,18 +29,19 @@ $view-btn-color: #198754;
 
         span {
             margin-top: 3px;
+            font-weight: 600;
         }
     }
 
     .app-card-body {
         margin-top: 10px;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         max-height: 100px;
 
         p {
             overflow: hidden;
             display: -webkit-box;
-            -webkit-line-clamp: 5;
+            -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
         }
     }
