added application confirmation component and single flow to check eiligibilty only

--- a/src/App.scss
+++ b/src/App.scss
@@ -354,10 +354,10 @@ a:hover {
   }
 }
 
-.button:focus {
-  background-color: #000000;
-  color: #ffffff;
-}
+// .button:focus {
+//   background-color: #000000;
+//   color: #ffffff;
+// }
 
 // /*--------------------------------------------------------------
 // # Navbar
