--- a/src/common/form/UserForm.scss
+++ b/src/common/form/UserForm.scss
@@ -1,60 +1,3 @@
-// $natwest-theme: #5a287d;
-
-// .user-form-wrapper {
-//     padding: 36px;
-//     border-radius: 5px;
-//     background: #f5f5f5;
-
-//     .user-form {
-//         width: 400px;
-
-//         .form-group {
-//             display: flex;
-//             justify-content: space-between;
-//             align-items: center;
-//         }
-
-//         .form-break {
-//             margin-bottom: 10px;
-//         }
-//     }
-
-//     .form-group {
-//         display: flex;
-//         justify-content: space-between;
-//         align-items: center;
-//     }
-
-//     input {
-//         width: 250px;
-//         height: 30px;
-//         padding: 6px;
-//         font-family: inherit;
-//         font-weight: inherit;
-//         font-size: 1.4rem;
-//         border: 1px solid #b3b3b3;
-//     }
-
-//     .form-break {
-//         margin-bottom: 10px;
-//     }
-
-//     .btn-eligibility {
-//         font-family: inherit;
-//         padding: 8px 12px;
-//         color: #fff;
-//         background: $natwest-theme;
-//         border: none;
-//         border-radius: 5px;
-//     }
-
-//     .btn-eligibility:hover {
-//         cursor: pointer;
-//         outline: 1px solid $natwest-theme;
-//         // scale: 1.03;
-//     }
-// }
-
 .form-title {
     margin-bottom: 32px;
 
@@ -80,4 +23,8 @@
         padding: 1rem 3rem;
         color: #fff;
     }
+}
+
+.spinner-border {
+    --bs-spinner-border-width: 0.1em !important
 }
