Implement modal using API data

--- a/src/components/application-history/LoanApplicationHistory.scss
+++ b/src/components/application-history/LoanApplicationHistory.scss
@@ -7,5 +7,45 @@
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
-    margin-top: -250px;
+    margin-top: -300px;
+}
+
+.info-lbl {
+    font-weight: 500;
+}
+
+.data-grid {
+    display: flex;
+    gap: 160px;
+
+    .info-box {
+        display: flex;
+        justify-content: space-between;
+        gap: 80px;
+        margin-bottom: 6px;
+
+        .status-indicator {
+            width: fit-content;
+            padding: 0 12px;
+            margin-top: 4px;
+            height: 24px;
+            border-radius: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1rem;
+            font-weight: 400;
+            color: #fff;
+
+            span {
+                margin-top: 3px;
+                font-weight: 600;
+            }
+        }
+    }
+}
+
+.info-box-remarks {
+    display: flex;
+    gap: 48px;
 }
