--- a/src/App.scss
+++ b/src/App.scss
@@ -6,10 +6,9 @@ $font-color: #4a4a4a;
 
 #root {
   // max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   padding: 2rem;
   box-sizing: border-box;
-  text-align: center;
 }
 
 html {
@@ -21,12 +20,9 @@ body {
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
   color: $font-color;
-  /* max-width: 1600px; */
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  // background: #f6fff9;
+  padding-top: 80px;
 }
 
 .border {
