--- a/src/common/app-components/AppComponents.scss
+++ b/src/common/app-components/AppComponents.scss
@@ -1,5 +1,10 @@
 .app-card-main {
-    height: 250px;
-    aspect-ratio: 1.5;
+    height: 180px;
+    width: 350px;
+    // aspect-ratio: 1.4;
     text-align: left;
+}
+
+.modal-dialog {
+    max-width: 700px;
 }
