--- a/src/components/application-history/LoanApplicationHistory.scss
+++ b/src/components/application-history/LoanApplicationHistory.scss
@@ -1,13 +1,8 @@
-.history-page-title {
-    position: absolute;
-    top: 100px;
-}
-
-.application-history-cards {
+.history-cards {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
-    margin-top: -300px;
+    margin-top: 30px;
 }
 
 .info-lbl {
@@ -16,12 +11,12 @@
 
 .data-grid {
     display: flex;
-    gap: 160px;
+    gap: 220px;
 
     .info-box {
         display: flex;
         justify-content: space-between;
-        gap: 80px;
+        gap: 40px;
         margin-bottom: 6px;
 
         .status-indicator {
@@ -45,7 +40,11 @@
     }
 }
 
+.application-history-page-title {
+    margin-top: 120px;
+}
+
 .info-box-remarks {
     display: flex;
-    gap: 48px;
+    gap: 60px;
 }
