Add header separator

--- a/src/components/application-history/LoanApplicationHistory.scss
+++ b/src/components/application-history/LoanApplicationHistory.scss
@@ -2,6 +2,11 @@
     padding: 0 60px;
 }
 
+.history-title {
+    border-bottom: 1px solid #dfdfdf;
+    padding-bottom: 3px;
+}
+
 .history-cards {
     display: flex;
     gap: 30px;
