--- a/src/common/app-components/AppComponents.scss
+++ b/src/common/app-components/AppComponents.scss
@@ -33,8 +33,8 @@
 }
 
 .btn-close-modal {
-    border: 1px solid #cacaca;
-    color: #919191;
+    border: 1px solid #a5a5a5;
+    color: #838383;
 
     &:hover {
         background: #bdbdbd;
